<resources>
    <string name="app_name">MyApp_Poema</string>

    <string name="Bandera1">
    Yo tengo una Bandera
    Bandera bicolor,
    Que indica que sigamos
    la senda del honor.

    Mi Bandera y mi Escudo
    con su bello quetzal
    simbolizan la patria,
    Guatemala inmortal.
    </string>

    <string name="Bandera2">
    Bandera celeste y blanca,
    bandera de mi patria,
    jirón de nuestro cielo,
    te canto con fervor
    y juro defenderte
    con brío y con denuedo,
    si oscurecer osaran
    las glorias de tu sol.

    La escuela me ha enseñado
    que en todas partes fuiste,
    emblema de trabajo,
    de libertad y honor;
    por mares y montañas
    el mundo recorriste
    llevando por doquiera
    la luz de tu esplendor.

    Bandera que eres gloria
    de un pueblo generosos,
    y de los hombres eres
    un vínculo de paz,,
    bajo tu manto cubres
    a todo aquel que anhele
    honrar con sus virtudes
    tu augusta majestad.
    </string>

    <string name="Bandera3">
    Aquí está la bandera idolatrada,
    la enseña que Belgrano nos legó.
    Cuando triste la Patria esclavizada
    con valor sus vínculos rompió.
    Aquí está la bandera esplendorosa
    que al mundo con sus triunfos admiró.
    Cuando altiva en la lucha y victoriosa
    la cima de los Andes escaló.
    Aquí está la bandera que un día
    en la batalla tremoló triunfal,
    y llena de orgullo y bizarría
    a San Lorenzo se dirigió inmortal.
    Aquí está como el cielo refulgente
    ostentando sublime majestad.
    Después de haber cruzado el continente
    exclamando a su paso:
    ¡Libertad!¡Libertad! ¡Libertad!
    </string>


    <string name="Ceiba1">
Grandiosa Ceiba legendaria
Cuyas ramas alcanzan el cielo
Cuna de Xibalbá milenaria
Enraizada por siempre en nuestro suelo

Te yergues luciendo en la copa
Una enorme corona frondosa
Y presumes desde lejos sin ropa
Tu esbelta figura majestuosa

Bajo tu sombra nuestros ancestros
Practicaron ceremonias rituales
Y buscaron en el firmamento
Impresionantes señales astrales

Fuiste árbol de vida sagrado
Fuente de sabiduría maya
Hoy vengo a rendirte tributo
Árbol nacional de Guatemala.
    </string>
    <string name="Ceiba2">
Erguida con gallardía
la ceiba, árbol nacional,
a primeras horas del nuevo día
eleva al cielo su verde cantar,
y por eso mi espíritu levanto
para dedicarle mis versos
y mis acentos tersos.

Nuestro árbol nacional
-decía mi abuelo Juan-,
nos prodiga su sombra sin igual
y los quetzales a su seno van.

Y es que la ceiba con su sombra
a las alegrías nombra,
y no es de extrañar que una sinfonía
de sus ramas brote cada día.
    </string>
    <string name="Ceiba3">
La ceiba Árbol Nacional de Guatemala
Exaltada por el botánico Ulises Rojas
Con miras de evitar a toda costa su tala
Para que sigan dando sombra sus hojas.

Ceiba Pentandra fiel insignia de mi país
Representante de la flora guatemalteca
Que en las grandes y altas montañas vivís
Para dar cobijo y que la hierba, no esté seca.

Ceiba Pentandra, representas el orgullo
De nuestras soberanas raíces mayas
Que nos abrigó como su tierno capullo
Y para tal fin libraron continúas batallas.

Ceiba Árbol Nacional de mi patria amada
Son tus verdes follajes terciopelo de aves;
Eres reverenciado como el árbol de la vida
Pócima medicinal incorporada en jarabes.
    </string>

    <string name="Monja1">
Hermosa Monja Blanca,
de las flores la monarca;

eres símbolo de paz
que crece en las montañas de la Verapaz;

eres símbolo de pureza y belleza
un regalo de la naturaleza;

eres símbolo de arte
por todos digna de admirarte;

eres símbolo de mi nación
¡Guatemala entera te lleva en el corazón!
    </string>

    <string name="Monja2">
Bella Monja Blanca de Guatemala
Tu hermosura cautiva a propios y extraños
Tu rareza te viste con traje de gala
Para ser admirada por adultos y niños.

Oh Monja Blanca, encanto de diamante
Flor nacional de mi patria amada
Musa del poeta, poesía del estudiante
Tu escasez y lindura te hace delicada.

Excelsa Monja Blanca de mi país
Reina de las verdes montañas
Te aprecio desde que existís
Como símbolo de grandes hazañas

Monja Blanca, símbolo patrimonial
En una moneda fuiste acuñada
Para conservar tu belleza natural
De las orquídeas la más soñada.
    </string>

    <string name="Monja3">
La Monja Blanca es un poema,
un tornasol, un hermosísimo emblema,
y por eso a mi sagrada Guatemala,
nadie se le iguala...

La Monja Blanca es una flor
salpicada de rocío y de amor,
y orgullosa nace, crece y persevera
en Guatemala, la tierra de la primavera.
    </string>
</resources>